force-app/main/default/objects/Documentos_Licita_ao__c/Documentos_Licita_ao__c.object-meta.xml
<CustomObject>
    <label>Documento (Empresa)</label>
    <nameField>
        <label>Nome do Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos (Empresas)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>