force-app/main/default/objects/Documentos_Licita_ao__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Documentos (Empresas)</relationshipLabel>
    <relationshipName>Documentos_Empresas</relationshipName>
    <type>Lookup</type>
</CustomField>