force-app/main/default/objects/Documentos_Licita_ao__c/fields/conta_dias__c.field-meta.xml
<CustomField>
    <fullName>conta_dias__c</fullName>
    <formula>DATEVALUE(Data_e_Hora_de_Vencimento__c) - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta Dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>