force-app/main/default/objects/Documentos_Licita_ao__c/fields/Data_e_Hora_de_Vencimento__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_de_Vencimento__c</fullName>
    <label>Data e Hora de Vencimento</label>
    <type>DateTime</type>
</CustomField>