force-app/main/default/objects/Documentos_Licita_ao__c/fields/Departamento_Respons_vel__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Respons_vel__c</fullName>
    <label>Departamento Responsável</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMERCIAL</fullName>
            </value>
            <value>
                <fullName>COMPRAS</fullName>
            </value>
            <value>
                <fullName>Contabilidade</fullName>
            </value>
            <value>
                <fullName>CONTROLADORIA</fullName>
            </value>
            <value>
                <fullName>DESENVOLVIMENTO</fullName>
            </value>
            <value>
                <fullName>FINANCEIRO</fullName>
            </value>
            <value>
                <fullName>GOVERNO</fullName>
            </value>
            <value>
                <fullName>JURÍDICO</fullName>
            </value>
            <value>
                <fullName>LOCAÇÃO</fullName>
            </value>
            <value>
                <fullName>LOGÍSTICA</fullName>
            </value>
            <value>
                <fullName>QUALIDADE</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>