force-app/main/default/objects/Documentos_Licita_ao__c/fields/Emissao__c.field-meta.xml
<CustomField>
    <fullName>Emissao__c</fullName>
    <formula>IF(
    ISBLANK(Link__c),
    IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=01531000008sqaq&amp;oid=00Di0000000JVhH&amp;lastMod=1502730360000&quot;, &quot;&quot; , 45, 125), 
    HYPERLINK( 
        Link__c , 
        IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=01531000008shfI&amp;oid=00Di0000000JVhH&amp;lastMod=1502730381000&quot;, &quot;&quot; , 45, 125),
        &quot;&quot;)
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emissão</label>
    <type>Text</type>
</CustomField>