force-app/main/default/objects/Documentos_Licita_ao__c/fields/Empresa2__c.field-meta.xml
<CustomField>
    <fullName>Empresa2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Documentos_das_Empresas__c</referenceTo>
    <relationshipLabel>Documentos (Empresas)</relationshipLabel>
    <relationshipName>Documentos_Empresas</relationshipName>
    <type>Lookup</type>
</CustomField>