force-app/main/default/objects/Documentos_Licita_ao__c/fields/Quantidade_Documentos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Documentos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade Documentos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>