force-app/main/default/objects/Documentos_Licita_ao__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <formula>IMAGE( status_imagem__c , &quot;&quot; , 45, 45)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>