force-app/main/default/objects/Documentos_Licita_ao__c/fields/Status_do_documento__c.field-meta.xml
<CustomField>
    <fullName>Status_do_documento__c</fullName>
    <label>Status do documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>Obsoleto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>