force-app/main/default/objects/Documentos_Licita_ao__c/validationRules/VALIDA_DATAHORA_EMISSAO.validationRule-meta.xml
<ValidationRule>
    <fullName>VALIDA_DATAHORA_EMISSAO</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Data_e_Hora_de_Emiss_o__c)</errorConditionFormula>
    <errorDisplayField>Data_e_Hora_de_Emiss_o__c</errorDisplayField>
    <errorMessage>PREENCHA DATA/HORA DE EMISSÃO DO DOCUMENTO.</errorMessage>
</ValidationRule>