force-app/main/default/objects/Documentos_Licita_ao__c/validationRules/VALIDA_DATAHORA_VENCIMENTO.validationRule-meta.xml
<ValidationRule>
    <fullName>VALIDA_DATAHORA_VENCIMENTO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	Sem_data_de_vencimento__c == FALSE,
	ISBLANK(Data_e_Hora_de_Vencimento__c)
)</errorConditionFormula>
    <errorDisplayField>Data_e_Hora_de_Vencimento__c</errorDisplayField>
    <errorMessage>PREENCHA DATA/HORA DE VENCIMENTO DO DOCUMENTO.</errorMessage>
</ValidationRule>