force-app/main/default/objects/Documentos_Licita_ao__c/listViews/C_pia_de_Todos_os_Documentos.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Todos_os_Documentos</fullName>
    <columns>NAME</columns>
    <columns>Empresa2__c</columns>
    <columns>Data_e_Hora_de_Emiss_o__c</columns>
    <columns>Data_e_Hora_de_Vencimento__c</columns>
    <columns>prazo_restante__c</columns>
    <columns>Download__c</columns>
    <columns>status__c</columns>
    <columns>Emissao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_do_documento__c</field>
        <operation>notEqual</operation>
        <value>Obsoleto</value>
    </filters>
    <filters>
        <field>Tipo__c</field>
        <operation>equals</operation>
        <value>POLÍTICAS</value>
    </filters>
    <label>POLÍTICAS</label>
</ListView>