force-app/main/default/objects/Documentos_Licita_ao__c/listViews/DEPARTAMENTO_RESPONS_VEL.listView-meta.xml
<ListView>
    <fullName>DEPARTAMENTO_RESPONS_VEL</fullName>
    <columns>NAME</columns>
    <columns>Empresa2__c</columns>
    <columns>Departamento_Respons_vel__c</columns>
    <columns>Data_e_Hora_de_Emiss_o__c</columns>
    <columns>Data_e_Hora_de_Vencimento__c</columns>
    <columns>prazo_restante__c</columns>
    <columns>Download__c</columns>
    <columns>status__c</columns>
    <columns>Emissao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento_Respons_vel__c</field>
        <operation>contains</operation>
    </filters>
    <label>DEPARTAMENTO RESPONSÁVEL</label>
</ListView>