force-app/main/default/objects/Documentos_Licita_ao__c/listViews/Empresa_ABC.listView-meta.xml
<ListView>
    <fullName>Empresa_ABC</fullName>
    <columns>NAME</columns>
    <columns>Empresa2__c</columns>
    <columns>Data_e_Hora_de_Emiss_o__c</columns>
    <columns>Data_e_Hora_de_Vencimento__c</columns>
    <columns>prazo_restante__c</columns>
    <columns>Download__c</columns>
    <columns>status__c</columns>
    <columns>Emissao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Empresa2__c</field>
        <operation>equals</operation>
        <value>ABC EQUIPAMENTOS HOSPITALARES</value>
    </filters>
    <label>Empresa ABC</label>
</ListView>