force-app/main/default/objects/Documentos_Licita_ao__c/listViews/Empresa_Hospcom_Filial_153.listView-meta.xml
<ListView>
    <fullName>Empresa_Hospcom_Filial_153</fullName>
    <columns>NAME</columns>
    <columns>Empresa2__c</columns>
    <columns>Data_e_Hora_de_Emiss_o__c</columns>
    <columns>Data_e_Hora_de_Vencimento__c</columns>
    <columns>prazo_restante__c</columns>
    <columns>Download__c</columns>
    <columns>status__c</columns>
    <columns>Emissao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Empresa2__c</field>
        <operation>contains</operation>
        <value>153</value>
    </filters>
    <label>Empresa Hospcom Filial 153</label>
</ListView>